--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "load-grunt-tasks": "^3.5.2"
   },
   "dependencies": {
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "xml2js": "^0.4.17"
   }
 }
